MyDemoOrg/force-app/main/default/objects/Attendee__c/Attendee__c.object-meta.xml
<CustomObject>
    <description>this object will keep the track of the attendees coming to the festival.</description>
    <label>Attendee</label>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>