MyDemoOrg/force-app/main/default/objects/Attendee__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <label>Credit</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>