MyDemoOrg/force-app/main/default/objects/Attendee__c/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <description>this keeps the email of the attendees.</description>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>