MyDemoOrg/force-app/main/default/objects/Attendee__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>this field will store the phone number of the attendees.</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>