MyDemoOrg/force-app/main/default/objects/Attendee__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <description>this stores the purchase date of the ticket.</description>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>