MyDemoOrg/force-app/main/default/objects/Attendee__c/fields/Purchase_source__c.field-meta.xml
<CustomField>
    <fullName>Purchase_source__c</fullName>
    <description>this fields stores the source from where the tickets were bought.</description>
    <label>Purchase source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Box Office</fullName>
            </value>
            <value>
                <fullName>Official Website</fullName>
            </value>
            <value>
                <fullName>3rd Party Ticket Vendor</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>