MyDemoOrg/force-app/main/default/objects/Attendee__c/fields/Total_spent__c.field-meta.xml
<CustomField>
    <fullName>Total_spent__c</fullName>
    <formula>IF(  ISPICKVAL(Ticket_type__c, &apos;VIP&apos;), 100* Tickets_Purchased__c , 50* Tickets_Purchased__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>