MyDemoOrg/force-app/main/default/objects/Attendee__c/validationRules/Tickets_limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Tickets_limit</fullName>
    <active>true</active>
    <description>this is the limit to the tickets to be sold to one customer which is minimum one and maximum 8.</description>
    <errorConditionFormula>( Tickets_Purchased__c  &gt; 8   ||   Tickets_Purchased__c  &lt; 1)</errorConditionFormula>
    <errorDisplayField>Tickets_Purchased__c</errorDisplayField>
    <errorMessage>Sorry you can buy tickets only in range of 1 to 8.</errorMessage>
</ValidationRule>