MyDemoOrg/force-app/main/default/objects/Attendee__c/validationRules/Tickets_Sold_out.validationRule-meta.xml
<ValidationRule>
    <fullName>Tickets_Sold_out</fullName>
    <active>true</active>
    <description>it will prevent overbooking.</description>
    <errorConditionFormula>$ObjectType.Festival__c.Fields.Total_Tickets_Sold__c  =  $ObjectType.Festival__c.Fields.Capacity__c</errorConditionFormula>
    <errorMessage>Sorry you are late. All Tickets are sold</errorMessage>
</ValidationRule>